--- a/view/activity.html
+++ b/view/activity.html
@@ -5,45 +5,50 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Future Imperfect by HTML5 UP</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="main.css" type="text/css" />
-	</head>
-	<body class="is-preload">
+	<!--CSS，加載在 head 之前-->
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+ 
+<!--JavaScript，加載在 body 之前-->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+<head>
+	<title>Future Imperfect by HTML5 UP</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="main.css" type="text/css" />
+</head>
+<body class="is-preload">
 
-		<!-- Wrapper -->
-			<div id="wrapper">
+	<!-- Wrapper -->
+		<div id="wrapper">
 
-				<!-- Header -->
-					<header id="header">
-						<h1><a href="#">萍水相逢</a></h1>
-						<nav class="links">
-							<ul>
-								<li><a href="activity.html">活動</a></li>
-								<li><a href="http://localhost:3002">聊天室</a></li>
-								<li><a href="personality">個人主頁</a></li><!-- 先做著放 -->
-								<li><a href="#">Tempus</a></li>
-								<li><a href="#">Adipiscing</a></li>
-							</ul>
-						</nav>
-						<nav class="main">
-							<ul>
-								<li class="search">
-									<a class="fa-search" href="#search">Search</a>
-									<form id="search" method="get" action="#">
-										<input type="text" name="query" placeholder="Search" />
-									</form>
-								</li>
-								<li class="menu">
-									<a class="fa-bars" href="#menu">Menu</a>
-								</li>
-							</ul>
-						</nav>
-					</header>
-
-				<!-- Menu -->
+			<!-- Header -->
+				<header id="header">
+					<h1><a href="index">萍水相逢</a></h1>
+					<nav class="links">
+						<ul>
+							<li><a href="#">活動</a></li>
+							<li><a href="#">聊天室</a></li>
+							<li><a href="#">個人主頁</a></li><!-- 先做著放 -->
+							<li><a href="#">Tempus</a></li>
+							<li><a href="#">Adipiscing</a></li>
+						</ul>
+					</nav>
+					<nav class="main">
+						<ul>
+							<li class="search">
+								<a class="fa-search" href="#search">Search</a>
+								<form id="search" method="get" action="#">
+									<input type="text" name="query" placeholder="Search" />
+								</form>
+							</li>
+							<li class="menu">
+								<a class="fa-bars" href="#menu">Menu</a>
+							</li>
+						</ul>
+					</nav>
+				</header>
+					<!-- Menu -->
 					<section id="menu">
 
 						<!-- Search -->
@@ -86,93 +91,46 @@
 						<!-- Actions -->
 							<section>
 								<ul class="actions stacked">
-									<li><a href="/" class="button large fit">Log Out</a></li>
+									<li><a href="login" class="button large fit">Log In</a></li>
 								</ul>
 							</section>
-
 					</section>
-
+                    
 				<!-- Main -->
-					<div id="main">
-
-						<!-- Post -->
-							<article class="post">
+					<div id="main">                                  
+						<!-- tital -->
 								<header>
 									<div class="title">
-										<h2><a href="single.html">天氣X子</a></h2>
-										<p>近期排行第一人氣作品</p>
-									</div>
-									<div class="meta">
-										<time class="published" datetime="2019-11-01">November 1, 2019</time>
-										<a href="#" class="author"><span class="name">Jane Doe</span><img src="avatar.jpg" alt="" /></a>
+										<h2>文章</h2>
+										<p>作品放置區 \( ●▽● )/</p>
 									</div>
 								</header>
-								<a href="single.html" class="image featured"><img src="whethering_cover.jpg" alt="" /></a>
-								<p>Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod placerat.Vivamus porttitor magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam corper. Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
-								<footer>
-									<ul class="actions">
-										<li><a href="single.html" class="button large">Continue Reading</a></li>
-									</ul>
-									<ul class="stats">
-										<li><div class="like_button"><button><a class="icon solid fa-heart"  id="like1"><span class="count">28</span></a></button></div class="like_button"></li>
-										<li><a href="#" class="icon solid fa-comment">128</a></li>
-										<li><a href="#">Report</a></li>
-									</ul>
-								</footer>
-							</article>
-
+	
 						<!-- Post -->
-							<article class="post">
-								<header>
-									<div class="title">
-										<h2><a href="single.html">地方媽媽是個好選擇</a></h2>
-										<p>Lorem ipsum dolor amet nullam consequat etiam feugiat</p>
-									</div>
-									<div class="meta">
-										<time class="published" datetime="2015-10-25">October 25, 2015</time>
-										<a href="#" class="author"><span class="name">Jane Doe</span><img src="avatar.jpg" alt="" /></a>
-									</div>
-								</header>
-								<a href="single.html" class="image featured"><img src="pic02.jpg" alt="" /></a>
-								<p>Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod placerat. Vivamus porttitor magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam corper.</p>
-								<footer>
-									<ul class="actions">
-										<li><a href="single.html" class="button large">Continue Reading</a></li>
-									</ul>
-									<ul class="stats">
-										<li><div class="like_button2"><button><a class="icon solid fa-heart" id="like2"><span class="count2">42</span></a></button></div class="like_button"></li>
-										<li><a href="#" class="icon solid fa-comment">13</a></li>
-										<li><a href="#">Report</a></li>
-									</ul>
-								</footer>
-							</article>
-
-						<!-- Post -->
-							<article class="post">
-								<header>
-									<div class="title">
-										<h2><a href="single.html">研究顯示：打飛機治百病</a></h2>
-										<p>Lorem ipsum dolor amet nullam consequat etiam feugiat</p>
-									</div>
-									<div class="meta">
-										<time class="published" datetime="2015-10-22">October 22, 2015</time>
-										<a href="#" class="author"><span class="name">Jane Doe</span><img src="avatar.jpg" alt="" /></a>
-									</div>
-								</header>
-								<a href="single.html" class="image featured"><img src="/pic03.jpg" alt="" /></a>
-								<p>Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod placerat. Vivamus porttitor magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam corper. Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla. Cras vehicula tellus eu ligula viverra, ac fringilla turpis suscipit. Quisque vestibulum rhoncus ligula.</p>
-								<footer>
-									<ul class="actions">
-										<li><a href="single.html" class="button large">Continue Reading</a></li>
-									</ul>
-									<ul class="stats">
-										<li><div class="like_button3"><button><a class="icon solid fa-heart" id="like3"><span class="count3">96</span></a></button></div class="like_button"></li>
-										<li><a href="#" class="icon solid fa-comment">104</a></li>
-										<li><a href="#">Report</a></li>
-									</ul>
-								</footer>
-							</article>
-
+						<article class="post">
+							<header>
+								<div class="title">
+									<h2><a href="single.html">地方媽媽是個好選擇</a></h2>
+									<p>Lorem ipsum dolor amet nullam consequat etiam feugiat</p>
+								</div>
+								<div class="meta">
+									<time class="published" datetime="2015-10-25">October 25, 2015</time>
+									<a href="#" class="author"><span class="name">Jane Doe</span><img src="avatar.jpg" alt="" /></a>
+								</div>
+							</header>
+							<a href="single.html" class="image featured"><img src="pic02.jpg" alt="" /></a>
+							<p>Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod placerat. Vivamus porttitor magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam corper.</p>
+							<footer>
+								<ul class="actions">
+									<li><a href="single.html" class="button large">Continue Reading</a></li>
+								</ul>
+								<ul class="stats">
+									<li><a href="#">General</a></li>
+									<li><a href="#" class="icon solid fa-heart">28</a></li>
+									<li><a href="#" class="icon solid fa-comment">128</a></li>
+								</ul>
+							</footer>
+						</article>
 						<!-- Post -->
 						<!--
 							<article class="post">
@@ -487,147 +445,63 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						-->
 
 						<!-- Pagination -->
-							<ul class="actions pagination">
-								<li><a href="" class="disabled button large previous">Previous Page</a></li>
-								<li><a href="#" class="button large next">Next Page</a></li>
-							</ul>
+						<ul class="actions pagination">
+							<li><a href="" class="disabled button large previous">Previous Page</a></li>
+							<li><a href="#" class="button large next">Next Page</a></li>
+						</ul>
 
-					</div>
+				</div>
 
 				<!-- Sidebar -->
 					<section id="sidebar">
 
 						<!-- Intro -->
 							<section id="intro">
-								<a href="#" class="logo"><img src="logo.jpg" alt="" /></a>
+								<a href="#" class="logo"><img src=".logo.jpg" alt="" /></a>
 								<header>
-									<h2>你沒朋友嗎？</h2>
-									<p>Another fine responsive site template by <a href="http://html5up.net">HTML5 UP</a></p>
+									<h2>暱稱</h2>
 								</header>
 							</section>
 
-						<!-- Mini Posts -->
-							<section>
-								<div class="mini-posts">
-
-									<!-- Mini Post -->
-										<article class="mini-post">
-											<header>
-												<h3><a href="single.html">邊緣人福音</a></h3>
-												<time class="published" datetime="2015-10-20">October 20, 2015</time>
-												<a href="#" class="author"><img src="avatar.jpg" alt="" /></a>
-											</header>
-											<a href="single.html" class="image"><img src="pic04.jpg" alt="" /></a>
-										</article>
-
-									<!-- Mini Post -->
-										<article class="mini-post">
-											<header>
-												<h3><a href="single.html">Rutrum neque accumsan</a></h3>
-												<time class="published" datetime="2015-10-19">October 19, 2015</time>
-												<a href="#" class="author"><img src="avatar.jpg" alt="" /></a>
-											</header>
-											<a href="single.html" class="image"><img src="pic05.jpg" alt="" /></a>
-										</article>
-
-									<!-- Mini Post -->
-										<article class="mini-post">
-											<header>
-												<h3><a href="single.html">Odio congue mattis</a></h3>
-												<time class="published" datetime="2015-10-18">October 18, 2015</time>
-												<a href="#" class="author"><img src="avatar.jpg" alt="" /></a>
-											</header>
-											<a href="single.html" class="image"><img src="pic06.jpg" alt="" /></a>
-										</article>
-
-									<!-- Mini Post -->
-										<article class="mini-post">
-											<header>
-												<h3><a href="single.html">Enim nisl veroeros</a></h3>
-												<time class="published" datetime="2015-10-17">October 17, 2015</time>
-												<a href="#" class="author"><img src="avatar.jpg" alt="" /></a>
-											</header>
-											<a href="single.html" class="image"><img src="pic07.jpg" alt="" /></a>
-										</article>
-
-								</div>
-							</section>
-
-						<!-- Posts List -->
-							<section>
-								<ul class="posts">
-									<li>
-										<article>
-											<header>
-												<h3><a href="single.html">Lorem ipsum fermentum ut nisl vitae</a></h3>
-												<time class="published" datetime="2015-10-20">October 20, 2015</time>
-											</header>
-											<a href="single.html" class="image"><img src="pic08.jpg" alt="" /></a>
-										</article>
-									</li>
-									<li>
-										<article>
-											<header>
-												<h3><a href="single.html">Convallis maximus nisl mattis nunc id lorem</a></h3>
-												<time class="published" datetime="2015-10-15">October 15, 2015</time>
-											</header>
-											<a href="single.html" class="image"><img src="pic09.jpg" alt="" /></a>
-										</article>
-									</li>
-									<li>
-										<article>
-											<header>
-												<h3><a href="single.html">Euismod amet placerat vivamus porttitor</a></h3>
-												<time class="published" datetime="2015-10-10">October 10, 2015</time>
-											</header>
-											<a href="single.html" class="image"><img src="pic10.jpg" alt="" /></a>
-										</article>
-									</li>
-									<li>
-										<article>
-											<header>
-												<h3><a href="single.html">Magna enim accumsan tortor cursus ultricies</a></h3>
-												<time class="published" datetime="2015-10-08">October 8, 2015</time>
-											</header>
-											<a href="single.html" class="image"><img src="pic11.jpg" alt="" /></a>
-										</article>
-									</li>
-									<li>
-										<article>
-											<header>
-												<h3><a href="single.html">Congue ullam corper lorem ipsum dolor</a></h3>
-												<time class="published" datetime="2015-10-06">October 7, 2015</time>
-											</header>
-											<a href="single.html" class="image"><img src="pic12.jpg" alt="" /></a>
-										</article>
-									</li>
-								</ul>
-							</section>
-
 						<!-- About -->
-							<section class="blurb">
-								<h2>About</h2>
-								<p>Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod amet placerat. Vivamus porttitor magna enim, ac accumsan tortor cursus at phasellus sed ultricies.</p>
-								<ul class="actions">
-									<li><a href="#" class="button">Learn More</a></li>
-								</ul>
-							</section>
+                        <section class="blurb">
+                            <h2>About Me</h2>
+                            <p>...</p>
+						</section>
 
 						<!-- Footer -->
-							<section id="footer">
-								<ul class="icons">
-									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon solid fa-rss"><span class="label">RSS</span></a></li>
-									<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-								</ul>
-								<p class="copyright">&copy; Untitled. Design: <a href="http://html5up.net">HTML5 UP</a>. Images: <a href="http://unsplash.com">Unsplash</a>.</p>
-							</section>
-
+						<section id="footer">
+							<ul class="icons">
+								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+								<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="#" class="icon solid fa-rss"><span class="label">RSS</span></a></li>
+								<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+							</ul>
+							<p class="copyright">&copy; Untitled. Design: <a href="http://html5up.net">HTML5 UP</a>. Images: <a href="http://unsplash.com">Unsplash</a>.</p>
+						</section>
+						
 					</section>
-
 			</div>
+
+			<!-- Modal -->
+  			<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    			<div class="modal-dialog modal-dialog-centered" role="document">
+     			 <div class="modal-content">
+       			 <div class="modal-header">
+        			 
+        			</div>
+        			<div class="modal-body">
+						<a href="picture_push"><img style="padding:0px 25px;" src="icon_photo.png"/>圖片</a>
+						<a href="text_push"><img style="padding:0px 25px;" src="icon_text.png"/>文字</a>
+						<a href="video_push"><img style="padding:0px 25px;" src="icon_video.png"/>影音</a>
+        			</div>
+        			<div class="modal-footer">
+         			 <button type="button" class="button small" data-dismiss="modal">Close</button>
+        			</div>
+      			</div>
+    			</div>
+  			</div>
 
 		<!-- Scripts -->
 			<script src="jquery.min.js"></script>
@@ -635,6 +509,11 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<script src="breakpoints.min.js"></script>
 			<script src="util.js"></script>
 			<script src="main.js"></script>
-			<script src="click_like.js"></script>
+			<script>
+				$('#myModal').on('shown.bs.modal', function () {
+		  			$('#myInput').trigger('focus')
+				})
+			</script>
+
 	</body>
 </html>
