--- a/view/personality.html
+++ b/view/personality.html
@@ -457,7 +457,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 						<!-- Intro -->
 							<section id="intro">
-								<a href="#" class="logo"><img src=".logo.jpg" alt="" /></a>
+								<a href="#" class="logo"><img src="logo.jpg" alt="" /></a>
 								<header>
 									<h2>暱稱</h2>
 								</header>
@@ -482,7 +482,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 									<li>
 										<article>
 											<header>
-												<h2><a href="fans.html" class="button fit">Fans</a></h2>
+												<h2><a href="fans" class="button fit">Fans</a></h2>
 											</header>
 										</article>
 									</li>
