--- a/view/picture_push.html
+++ b/view/picture_push.html
@@ -18,12 +18,12 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html">萍水相逢</a></h1>
+						<h1><a href="index">萍水相逢</a></h1>
 						<nav class="links">
 							<ul>
 								<li><a href="#">活動</a></li>
 								<li><a href="#">聊天室</a></li>
-								<li><a href="personality.html">個人主頁</a></li><!-- 先做著放 -->
+								<li><a href="personality">個人主頁</a></li><!-- 先做著放 -->
 								<li><a href="#">Tempus</a></li>
 								<li><a href="#">Adipiscing</a></li>
 							</ul>
@@ -132,16 +132,6 @@
 									<h2>暱稱</h2>
 								</header>
 							</section>
-
-						<!-- About -->
-                        <section class="blurb">
-                            <h2>About Me</h2>
-                            <p>...</p>
-                        </section>
-
-						
-
-						
 
 						<!-- Footer -->
 							<section id="footer">
