--- a/view/video_push.html
+++ b/view/video_push.html
@@ -15,7 +15,7 @@
 		<title>Future Imperfect by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-        <link rel="stylesheet" href="css/main.css" />
+		<link rel="stylesheet" href="main.css" />
 	</head>
 	<body class="is-preload">
 
@@ -24,12 +24,12 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html">萍水相逢</a></h1>
+						<h1><a href="index">萍水相逢</a></h1>
 						<nav class="links">
 							<ul>
 								<li><a href="#">活動</a></li>
 								<li><a href="#">聊天室</a></li>
-								<li><a href="personality.html">個人主頁</a></li><!-- 先做著放 -->
+								<li><a href="personality">個人主頁</a></li><!-- 先做著放 -->
 								<li><a href="#">Tempus</a></li>
 								<li><a href="#">Adipiscing</a></li>
 							</ul>
@@ -137,64 +137,11 @@
 
 						<!-- Intro -->
 							<section id="intro">
-								<a href="#" class="logo"><img src="../images/logo.jpg" alt="" /></a>
+								<a href="#" class="logo"><img src="logo.jpg" alt="" /></a>
 								<header>
 									<h2>暱稱</h2>
 								</header>
 							</section>
-
-						<!-- About -->
-                        <section class="blurb">
-                            <h2>About Me</h2>
-                            <p>...</p>
-                        </section>
-
-						<!-- Mini Posts 
-							<section>
-								<div class="mini-posts">-->
-
-									<!-- Mini Post 
-										<article class="mini-post">
-											<header>
-												<h3><a href="single.html">邊緣人福音</a></h3>
-												<time class="published" datetime="2015-10-20">October 20, 2015</time>
-												<a href="#" class="author"><img src="images/avatar.jpg" alt="" /></a>
-											</header>
-											<a href="single.html" class="image"><img src="images/pic04.jpg" alt="" /></a>
-										</article>-->
-
-									<!-- Mini Post 
-										<article class="mini-post">
-											<header>
-												<h3><a href="single.html">Rutrum neque accumsan</a></h3>
-												<time class="published" datetime="2015-10-19">October 19, 2015</time>
-												<a href="#" class="author"><img src="images/avatar.jpg" alt="" /></a>
-											</header>
-											<a href="single.html" class="image"><img src="images/pic05.jpg" alt="" /></a>
-										</article>-->
-
-									<!-- Mini Post 
-										<article class="mini-post">
-											<header>
-												<h3><a href="single.html">Odio congue mattis</a></h3>
-												<time class="published" datetime="2015-10-18">October 18, 2015</time>
-												<a href="#" class="author"><img src="images/avatar.jpg" alt="" /></a>
-											</header>
-											<a href="single.html" class="image"><img src="images/pic06.jpg" alt="" /></a>
-										</article>-->
-
-									<!-- Mini Post 
-										<article class="mini-post">
-											<header>
-												<h3><a href="single.html">Enim nisl veroeros</a></h3>
-												<time class="published" datetime="2015-10-17">October 17, 2015</time>
-												<a href="#" class="author"><img src="images/avatar.jpg" alt="" /></a>
-											</header>
-											<a href="single.html" class="image"><img src="images/pic07.jpg" alt="" /></a>
-										</article>-->
-
-								<!--</div>
-                            </section> -->
 
 						<!-- Footer -->
 							<section id="footer">
@@ -211,31 +158,12 @@
 					</section>
 			</div>
 
-			<!-- Modal -->
-  			<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-    			<div class="modal-dialog modal-dialog-centered" role="document">
-     			 <div class="modal-content">
-       			 <div class="modal-header">
-        			 
-        			</div>
-        			<div class="modal-body">
-						<a href="picture_push.html"><img style="padding:0px 28px;" src="../images/icon_photo.png"/>圖片</a>
-						<a href="text_push.html"><img style="padding:0px 28px;" src="../images/icon_text.png"/>文字</a>
-						<a href="video_push.html"><img style="padding:0px 28px;" src="../images/icon_video.png"/>影音</a>
-        			</div>
-        			<div class="modal-footer">
-         			 <button type="button" class="button small" data-dismiss="modal">Close</button>
-        			</div>
-      			</div>
-    			</div>
-  			</div>
-
 		<!-- Scripts -->
-			<script src="js/jquery.min.js"></script>
-			<script src="js/browser.min.js"></script>
-			<script src="js/breakpoints.min.js"></script>
-			<script src="js/util.js"></script>
-			<script src="js/main.js"></script>
+			<script src="jquery.min.js"></script>
+			<script src="browser.min.js"></script>
+			<script src="breakpoints.min.js"></script>
+			<script src="util.js"></script>
+			<script src="main.js"></script>
 			<script>
 				$('#myModal').on('shown.bs.modal', function () {
 		  			$('#myInput').trigger('focus')
