活動頁面上線 OAO

--- a/view/activity.html
+++ b/view/activity.html
@@ -27,9 +27,9 @@
 					<h1><a href="index">萍水相逢</a></h1>
 					<nav class="links">
 						<ul>
-							<li><a href="#">活動</a></li>
+							<li><a href="activity">活動</a></li>
 							<li><a href="#">聊天室</a></li>
-							<li><a href="#">個人主頁</a></li><!-- 先做著放 -->
+							<li><a href="personality">個人主頁</a></li><!-- 先做著放 -->
 							<li><a href="#">Tempus</a></li>
 							<li><a href="#">Adipiscing</a></li>
 						</ul>
@@ -101,38 +101,108 @@
 						<!-- tital -->
 								<header>
 									<div class="title">
-										<h2>文章</h2>
-										<p>作品放置區 \( ●▽● )/</p>
+										<div>
+											<ul class="actions fit">
+												<li><a href="#" class="button fit">最新活動</a></li>
+												<li><a href="#" class="button fit">近期活動</a></li>
+												<li><a href="#" class="button fit">歷史活動</a></li>
+											</ul>
+										</div>
 									</div>
 								</header>
 	
 						<!-- Post -->
+						<ul class="showMoreNChildren" pagesize="1">
 						<article class="post">
 							<header>
 								<div class="title">
-									<h2><a href="single.html">地方媽媽是個好選擇</a></h2>
-									<p>Lorem ipsum dolor amet nullam consequat etiam feugiat</p>
+									<h2><a href="https://www.stubhub.tw/%E4%BA%94%E6%9C%88%E5%A4%A9-mayday-%E9%96%80%E7%A5%A8/ca6396" target="_blank">五月天 Mayday 2020 - 跨年場</a></h2>
+									<p> Just Rock It!!!“藍 ｜ BLUE” 桃園演唱會 </p>
 								</div>
 								<div class="meta">
-									<time class="published" datetime="2015-10-25">October 25, 2015</time>
+									<time class="published" datetime="2019-12-31">December 31, 2019</time>
 									<a href="#" class="author"><span class="name">Jane Doe</span><img src="avatar.jpg" alt="" /></a>
 								</div>
 							</header>
-							<a href="single.html" class="image featured"><img src="pic02.jpg" alt="" /></a>
-							<p>Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod placerat. Vivamus porttitor magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam corper.</p>
+							<a href="https://www.stubhub.tw/%E4%BA%94%E6%9C%88%E5%A4%A9-mayday-%E9%96%80%E7%A5%A8/ca6396" target="_blank" class="image featured"><img src="https://tixinn.com/file_pic/20190925-104103.jpg" alt="" /></a>
+							<p>對號座席 : 無限搖滾區 NT4880/NT3880 | 看台區 NT3280/NT2880/NT2280/NT1880/NT800<br>漫遊站區 : 任意漫遊區 NT2880</p>
+							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3615.994495955573!2d121.19933631500555!3d25.000302983988124!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3468216c24a26539%3A0xd1664ba93bd9a37e!2sTaoyuan%20International%20Baseball%20Stadium!5e0!3m2!1sen!2stw!4v1577294763947!5m2!1sen!2stw" width="850" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>        
 							<footer>
-								<ul class="actions">
-									<li><a href="single.html" class="button large">Continue Reading</a></li>
-								</ul>
+								<!--
+								    <ul class="actions">
+								    	<li><a href="single.html" class="button large">Continue Reading</a></li>
+								    </ul>
+							    -->
 								<ul class="stats">
-									<li><a href="#">General</a></li>
-									<li><a href="#" class="icon solid fa-heart">28</a></li>
-									<li><a href="#" class="icon solid fa-comment">128</a></li>
+									<li><a href="https://www.google.com/maps/place/Taoyuan+International+Baseball+Stadium/@25.000303,121.1993363,17z/data=!3m1!4b1!4m5!3m4!1s0x3468216c24a26539:0xd1664ba93bd9a37e!8m2!3d25.000303!4d121.201525" target="_blank">地址:320桃園市中壢區領航北路一段1號</a></li>
+									<li><a href="#" class="icon solid fa-heart">2019</a></li>
+									<li><a href="#" class="icon solid fa-comment">1231</a></li>
 								</ul>
 							</footer>
 						</article>
+
 						<!-- Post -->
-						<!--
+						<article class="post">
+							<header>
+								<div class="title">
+									<h2><a href="https://newyear2020taichung.com.tw/" target="_blank">【2020台中跨年】跨年晚會</a></h2>
+									<p> 「Shining！嗨玩台中2020跨年狂歡夜」 </p>
+								</div>
+								<div class="meta">
+									<time class="published" datetime="2019-12-31">December 31, 2019</time>
+									<a href="#" class="author"><span class="name">Jane Doe</span><img src="avatar.jpg" name="SlideShow" alt="" /></a>
+								</div>
+							</header>
+							<a href="https://newyear2020taichung.com.tw/" target="_blank" class="image featured"><img src="https://res.klook.com/image/upload/fl_lossy.progressive/q_auto/f_auto/blogtw/2019/12/2020%E5%8F%B0%E4%B8%AD%E8%B7%A8%E5%B9%B4%E6%99%9A%E6%9C%83%E5%A4%AA%E5%B9%B3.png" alt="" /></a>
+							<p>號稱全台最盛大的跨年狂歡活動，就在台中了！因為今年主辦單位擴大規劃，主要會分成「后里」與「太平」兩個現場，一個在后里的麗寶樂園第二停車場，另一個則是在太平運動場舉行，兩個地方同步跨年，邀請的卡司也超過40組，讓兩地的跨年氣氛，歡騰蔓延至整個大台中地區！其中后里現場晚上6點就開始，除了獨家演出的王心凌、陪倒數的徐佳瑩，還有首度於跨年開唱的綜藝天王吳宗憲。</p>
+							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4860.944896350271!2d120.71733294870097!3d24.11576588267874!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x346922c9b6b13d63%3A0xf83c43d63f48fa7e!2z5aSq5bmz5Y2A6YGL5YuV5aC0!5e0!3m2!1sen!2stw!4v1577299526793!5m2!1sen!2stw" width="850" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+							<footer>
+								<!--
+								    <ul class="actions">
+								    	<li><a href="single.html" class="button large">Continue Reading</a></li>
+								    </ul>
+							    -->
+								<ul class="stats">
+									<li><a href="https://www.google.com/maps/place/%E5%A4%AA%E5%B9%B3%E5%8D%80%E9%81%8B%E5%8B%95%E5%A0%B4/@24.1157659,120.7173329,16.58z/data=!4m5!3m4!1s0x346922c9b6b13d63:0xf83c43d63f48fa7e!8m2!3d24.1305542!4d120.7208181" target="_blank">地址:411台中市太平區中興東路99號</a></li>
+									<li><a href="#" class="icon solid fa-heart">165</a></li>
+									<li><a href="#" class="icon solid fa-comment">94</a></li>
+								</ul>
+							</footer>
+						</article>
+
+						<!-- Post -->
+						<article class="post">
+							<header>
+								<div class="title">
+									<h2><a href="https://travel.taichung.gov.tw/zh-tw/Event/ActivityDetail/4936/2020%E5%8F%B0%E7%81%A3%E7%87%88%E6%9C%83" target="_blank">台灣燈會2020「璀璨台中」</a></h2>
+									<p> 台中好吃、好玩又好買，歡迎海內外民眾來台中賞燈遊玩。 </p>
+								</div>
+								<div class="meta">
+									<time class="published" datetime="2019-12-21">December 21, 2019</time>
+									<a href="#" class="author"><span class="name">Jane Doe</span><img src="avatar.jpg" alt="" /></a>
+								</div>
+							</header>
+							<a href="https://travel.taichung.gov.tw/zh-tw/Event/ActivityDetail/4936/2020%E5%8F%B0%E7%81%A3%E7%87%88%E6%9C%83" target="_blank" class="image featured"><img src="https://travel.taichung.gov.tw/Utility/DisplayImage?id=30743" alt="" /></a>
+							<p>主展區「森林秘境、藝想世界」▸2020/2/8-2/23 后里森林園區、馬場園區展出<br>副展區「童趣樂園」▸2019/12/21-2020/2/23 文心森林公園</p>
+							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3640.7584801151224!2d120.64331531482334!3d24.145118584396354!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34693d9555555555%3A0x684405b48b3d9796!2sWen-Xin%20Forest%20Park!5e0!3m2!1sen!2stw!4v1577297239758!5m2!1sen!2stw" width="850" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+							<footer>
+								<!--
+								    <ul class="actions">
+								    	<li><a href="single.html" class="button large">Continue Reading</a></li>
+								    </ul>
+							    -->
+								<ul class="stats">
+									<li><a href="https://www.google.com/maps/place/Wen-Xin+Forest+Park/@24.1451186,120.6433153,17z/data=!3m1!4b1!4m5!3m4!1s0x34693d9555555555:0x684405b48b3d9796!8m2!3d24.1451186!4d120.645504" target="_blank">地址:408台中市南屯區文心路一段</a></li>
+									<li><a href="#" class="icon solid fa-heart">537</a></li>
+									<li><a href="#" class="icon solid fa-comment">411</a></li>
+								</ul>
+							</footer>
+						</article>
+
+					    </ul>
+
+						<!-- Post -->
+					    <!--
 							<article class="post">
 								<header>
 									<div class="title">
@@ -445,10 +515,13 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						-->
 
 						<!-- Pagination -->
+						<!--
 						<ul class="actions pagination">
+						
 							<li><a href="" class="disabled button large previous">Previous Page</a></li>
-							<li><a href="#" class="button large next">Next Page</a></li>
+							<li><a href="#" class="button large next">More</a></li>
 						</ul>
+					    -->	
 
 				</div>
 
@@ -468,6 +541,84 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
                             <h2>About Me</h2>
                             <p>...</p>
 						</section>
+
+						<!-- Posts List -->
+						<!--
+							<section>
+								<ul class="posts">
+									<li>
+										<article>
+											<header>
+												<h2><a href=" " class="button fit" data-toggle="modal" data-target="#exampleModalCenter">發表</a></h2>
+											</header>
+										</article>
+									</li>
+									<li>
+										<article>
+											<header>
+												<h2><a href="fans.html" class="button fit">Fans</a></h2>
+											</header>
+										</article>
+									</li>
+									
+										<li>
+										<article>
+											<header>
+												<h3><a href="single.html">Convallis maximus nisl mattis nunc id lorem</a></h3>
+												<time class="published" datetime="2015-10-15">October 15, 2015</time>
+											</header>
+											<a href="single.html" class="image"><img src="images/pic09.jpg" alt="" /></a>
+										</article>
+									</li>
+								</ul>
+							</section>
+						-->
+						<!-- Mini Posts 
+							<section>
+								<div class="mini-posts">-->
+
+									<!-- Mini Post 
+										<article class="mini-post">
+											<header>
+												<h3><a href="single.html">邊緣人福音</a></h3>
+												<time class="published" datetime="2015-10-20">October 20, 2015</time>
+												<a href="#" class="author"><img src="images/avatar.jpg" alt="" /></a>
+											</header>
+											<a href="single.html" class="image"><img src="images/pic04.jpg" alt="" /></a>
+										</article>-->
+
+									<!-- Mini Post 
+										<article class="mini-post">
+											<header>
+												<h3><a href="single.html">Rutrum neque accumsan</a></h3>
+												<time class="published" datetime="2015-10-19">October 19, 2015</time>
+												<a href="#" class="author"><img src="images/avatar.jpg" alt="" /></a>
+											</header>
+											<a href="single.html" class="image"><img src="images/pic05.jpg" alt="" /></a>
+										</article>-->
+
+									<!-- Mini Post 
+										<article class="mini-post">
+											<header>
+												<h3><a href="single.html">Odio congue mattis</a></h3>
+												<time class="published" datetime="2015-10-18">October 18, 2015</time>
+												<a href="#" class="author"><img src="images/avatar.jpg" alt="" /></a>
+											</header>
+											<a href="single.html" class="image"><img src="images/pic06.jpg" alt="" /></a>
+										</article>-->
+
+									<!-- Mini Post 
+										<article class="mini-post">
+											<header>
+												<h3><a href="single.html">Enim nisl veroeros</a></h3>
+												<time class="published" datetime="2015-10-17">October 17, 2015</time>
+												<a href="#" class="author"><img src="images/avatar.jpg" alt="" /></a>
+											</header>
+											<a href="single.html" class="image"><img src="images/pic07.jpg" alt="" /></a>
+										</article>-->
+
+								<!--</div>
+                            </section> -->
 
 						<!-- Footer -->
 						<section id="footer">
@@ -509,6 +660,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<script src="breakpoints.min.js"></script>
 			<script src="util.js"></script>
 			<script src="main.js"></script>
+			<script src="showmore.js"></script>
+			<script src="picslideshow.js"></script>
 			<script>
 				$('#myModal').on('shown.bs.modal', function () {
 		  			$('#myInput').trigger('focus')
