--- a/view/index.html
+++ b/view/index.html
@@ -18,10 +18,10 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="#">萍水相逢</a></h1>
+						<h1><a href="index">萍水相逢</a></h1>
 						<nav class="links">
 							<ul>
-								<li><a href="activity.html">活動</a></li>
+								<li><a href="activity">活動</a></li>
 								<li><a href="http://localhost:3002">聊天室</a></li>
 								<li><a href="personality">個人主頁</a></li><!-- 先做著放 -->
 								<li><a href="#">Tempus</a></li>
