--- a/view/personality.html
+++ b/view/personality.html
@@ -27,9 +27,9 @@
 					<h1><a href="index">萍水相逢</a></h1>
 					<nav class="links">
 						<ul>
-							<li><a href="#">活動</a></li>
+							<li><a href="activity">活動</a></li>
 							<li><a href="#">聊天室</a></li>
-							<li><a href="#">個人主頁</a></li><!-- 先做著放 -->
+							<li><a href="personality">個人主頁</a></li><!-- 先做著放 -->
 							<li><a href="#">Tempus</a></li>
 							<li><a href="#">Adipiscing</a></li>
 						</ul>
