--- a/view/text_push.html
+++ b/view/text_push.html
@@ -120,7 +120,7 @@
 											</div>
 											<div class="col-12">
 												<ul class="actions">
-													<li><input type="submit" value="Send" /></li>
+													<li><input type="button" value="Send" onclick="location.href='upload1'"/></li>
 													<li><input type="reset" value="Reset" /></li>
 												</ul>
 											</div>
@@ -162,32 +162,6 @@
 			<script src="breakpoints.min.js"></script>
 			<script src="util.js"></script>
 			<script src="main.js"></script>
-			<script >     
-				var eleTextarea = document.querySelector('textarea');
-				var eleButton = document.querySelector('input[type="submit"]');
-			
-				var funDownload = function (content, filename) {
-				var eleLink = document.createElement('a');
-					eleLink.download = filename;
-					eleLink.style.display = 'none';
-					// 内容成blob地址
-					var blob = new Blob([content]);
-					eleLink.href = URL.createObjectURL(blob);
-					// 點擊
-					document.body.appendChild(eleLink);
-					eleLink.click();
-					// 然后移除
-					document.body.removeChild(eleLink);
-					};
-			
-					if ('download' in document.createElement('a')) {
-					// 下载
-						eleButton.addEventListener('click', function () {
-							funDownload(eleTextarea.value, 'test.txt');    
-						});
-					} 
-					
-			</script>
 
 	</body>
 </html>
