--- a/view/activity.html
+++ b/view/activity.html
@@ -126,7 +126,7 @@
 							<a href="https://www.stubhub.tw/%E4%BA%94%E6%9C%88%E5%A4%A9-mayday-%E9%96%80%E7%A5%A8/ca6396" target="_blank" class="image featured"><img src="https://tixinn.com/file_pic/20190925-104103.jpg" alt="" /></a>
 							<p>日期&ensp;:&ensp;2019年12月21號&ensp;~&ensp;2020年1月4號<br>地點&ensp;:&ensp;桃園國際棒球場</p>
 							<p>對號座席-無限搖滾區 NT4880/NT3880 | 看台區 NT3280/NT2880/NT2280/NT1880/NT800<br>漫遊站區-任意漫遊區 NT2880</p>
-							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3615.994495955573!2d121.19933631500555!3d25.000302983988124!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3468216c24a26539%3A0xd1664ba93bd9a37e!2sTaoyuan%20International%20Baseball%20Stadium!5e0!3m2!1sen!2stw!4v1577294763947!5m2!1sen!2stw" width="830" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>        
+							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3615.994495955573!2d121.19933631500555!3d25.000302983988124!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3468216c24a26539%3A0xd1664ba93bd9a37e!2sTaoyuan%20International%20Baseball%20Stadium!5e0!3m2!1sen!2stw!4v1577294763947!5m2!1sen!2stw" width="100%" height="300" frameborder="0" style="border:0;"></iframe>        
 							<footer>
 								<!--
 								    <ul class="actions">
@@ -157,7 +157,7 @@
 							<a href="https://newyear2020taichung.com.tw/" target="_blank" class="image featured"><img src="https://res.klook.com/image/upload/fl_lossy.progressive/q_auto/f_auto/blogtw/2019/12/2020%E5%8F%B0%E4%B8%AD%E8%B7%A8%E5%B9%B4%E6%99%9A%E6%9C%83%E5%A4%AA%E5%B9%B3.png" alt="" /></a>
 							<p>日期&ensp;:&ensp;2019年12月31號<br>地點&ensp;:&ensp;太平區運動場</p>
 							<p>號稱全台最盛大的跨年狂歡活動，就在台中了！因為今年主辦單位擴大規劃，主要會分成「后里」與「太平」兩個現場，一個在后里的麗寶樂園第二停車場，另一個則是在太平運動場舉行，兩個地方同步跨年，邀請的卡司也超過40組，讓兩地的跨年氣氛，歡騰蔓延至整個大台中地區！其中后里現場晚上6點就開始，除了獨家演出的王心凌、陪倒數的徐佳瑩，還有首度於跨年開唱的綜藝天王吳宗憲。</p>
-							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4860.944896350271!2d120.71733294870097!3d24.11576588267874!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x346922c9b6b13d63%3A0xf83c43d63f48fa7e!2z5aSq5bmz5Y2A6YGL5YuV5aC0!5e0!3m2!1sen!2stw!4v1577299526793!5m2!1sen!2stw" width="830" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4860.944896350271!2d120.71733294870097!3d24.11576588267874!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x346922c9b6b13d63%3A0xf83c43d63f48fa7e!2z5aSq5bmz5Y2A6YGL5YuV5aC0!5e0!3m2!1sen!2stw!4v1577299526793!5m2!1sen!2stw" width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
 							<footer>
 								<!--
 								    <ul class="actions">
@@ -188,7 +188,9 @@
 							<a href="https://travel.taichung.gov.tw/zh-tw/Event/ActivityDetail/4936/2020%E5%8F%B0%E7%81%A3%E7%87%88%E6%9C%83" target="_blank" class="image featured"><img src="https://travel.taichung.gov.tw/Utility/DisplayImage?id=30743" alt="" /></a>
 							<p>日期&ensp;:&ensp;2020年2月8號&ensp;~&ensp;2020年2月23號&nbsp;(主展區「森林秘境、藝想世界」)<br>&emsp;&emsp;&emsp;&nbsp;2019年12月21號&nbsp;~&nbsp;2020年2月23號&nbsp;(副展區「童趣樂園」)<br>地點&ensp;:&ensp;后里森林園區、馬場園區展出&nbsp;(主展區「森林秘境、藝想世界」)<br>&emsp;&emsp;&emsp;&nbsp;文心森林公園&nbsp;(副展區「童趣樂園」)</p>
 							<p>2020台灣燈會在臺中，首創場域主題策展，利用場域特性，以城市特色為核心，規劃三大主題。包括主展區的森林園區-「森林秘境」，以倡議社區與環境共存的里山大地為始，融入生態永續、藝術美學政策規劃，並結合象徵多元族群、信仰融合的主題燈區。馬場園區命名「藝想世界」，以台灣燈會「民俗文化根，傳統國際化」宗旨為基礎，規劃傳統花燈結合機械動態；科技與多媒體應用，再造燈藝經典。副展區文心森林公園-命名「童趣樂園」，以親子共遊、童趣歡樂為題，策劃多項主題燈區及表演節目，打造市中心的兒童森林樂園。其中，副展區將提前於今年12月底開燈，期間更跨過耶誕節和春節兩大重要節慶，讓更多童趣的歡樂氛圍感染整個臺中。</p>
-							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3640.7584801151224!2d120.64331531482334!3d24.145118584396354!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34693d9555555555%3A0x684405b48b3d9796!2sWen-Xin%20Forest%20Park!5e0!3m2!1sen!2stw!4v1577297239758!5m2!1sen!2stw" width="830" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+							<div>
+							    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3640.7584801151224!2d120.64331531482334!3d24.145118584396354!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34693d9555555555%3A0x684405b48b3d9796!2sWen-Xin%20Forest%20Park!5e0!3m2!1sen!2stw!4v1577297239758!5m2!1sen!2stw" width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+							</div>
 							<footer>
 								<!--
 								    <ul class="actions">
@@ -542,11 +544,12 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 							</section>
 
 						<!-- About -->
+						<!--
                         <section class="blurb">
                             <h2>About Me</h2>
                             <p>...</p>
 						</section>
-						
+					    -->
 						
 						<!-- Posts List -->
 						
@@ -581,17 +584,14 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 										<h2>history</h2>
 										<article>
 											<header>
-												<h3><a href="single.html">Congue ullam corper lorem ipsum dolor</a></h3>
-												<time class="published" datetime="2015-10-06">October 7, 2015</time>
+												<h3><a href="https://travel.taichung.gov.tw/zh-tw/Event/ActivityDetail/4936/2020%E5%8F%B0%E7%81%A3%E7%87%88%E6%9C%83" target="_blank">台灣燈會2020「璀璨台中」</a></h3>
+												<time class="published" datetime="2019-12-21">December 21, 2019</time>
 											</header>
-											<a href="single.html" class="image"><img src="pic12.jpg" alt="" /></a>
+											<a href="https://travel.taichung.gov.tw/zh-tw/Event/ActivityDetail/4936/2020%E5%8F%B0%E7%81%A3%E7%87%88%E6%9C%83" target="_blank" class="image"><img src="https://travel.taichung.gov.tw/Utility/DisplayImage?id=30743" alt="" /></a>
 										</article>
 									</li>
-
 								</ul>
 				            </section>
-
-						
 
 						<!-- Mini Posts 
 							<section>
