--- a/view/index.html
+++ b/view/index.html
@@ -508,7 +508,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 								<a href="#" class="logo"><img src="logo.jpg" alt="" /></a>
 								<header>
 									<h2>你沒朋友嗎？</h2>
-									<p>Another fine responsive site template by <a href="http://html5up.net">HTML5 UP</a></p>
+									<p>放心，我們有絕佳的解決方案！</p>
 								</header>
 							</section>
 
