--- a/view/index.html
+++ b/view/index.html
@@ -23,11 +23,11 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="#">萍水相逢</a></h1>
+						<h1><a href="index">萍水相逢</a></h1>
 						<nav class="links">
 							<ul>
 								<li><a href="activity">活動</a></li>
-								<li><a href="http://localhost:3000">聊天室</a></li>
+								<li><a href="chatroom">聊天室</a></li>
 								<li><a href="personality">個人主頁</a></li><!-- 先做著放 -->
 							</ul>
 						</nav>
@@ -95,7 +95,6 @@
 									<li><a href="/" class="button large fit">Log Out</a></li>
 								</ul>
 							</section>
-
 					</section>
 
 				<!-- Main -->
@@ -515,7 +514,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<!-- Mini Posts -->
 							<section>
 								<div class="mini-posts">
-
 									<!-- Mini Post -->
 										<article class="mini-post">
 											<header>
@@ -525,7 +523,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 											</header>
 											<a href="single.html" class="image"><img src="pic04.jpg" alt="" /></a>
 										</article>
-
 									<!-- Mini Post -->
 										<article class="mini-post">
 											<header>
@@ -535,7 +532,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 											</header>
 											<a href="single.html" class="image"><img src="pic05.jpg" alt="" /></a>
 										</article>
-
 									<!-- Mini Post -->
 										<article class="mini-post">
 											<header>
@@ -545,7 +541,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 											</header>
 											<a href="single.html" class="image"><img src="pic06.jpg" alt="" /></a>
 										</article>
-
 									<!-- Mini Post -->
 										<article class="mini-post">
 											<header>
@@ -555,7 +550,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 											</header>
 											<a href="single.html" class="image"><img src="pic07.jpg" alt="" /></a>
 										</article>
-
 								</div>
 							</section>
 
@@ -630,9 +624,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 								</ul>
 								<p class="copyright">&copy; Untitled. Design: <a href="http://html5up.net">HTML5 UP</a>. Images: <a href="http://unsplash.com">Unsplash</a>.</p>
 							</section>
-
 					</section>
-
 			</div>
 
 		<!-- Scripts -->
