--- a/view/login.html
+++ b/view/login.html
@@ -19,8 +19,8 @@
 							<li><a href="#">聊天室</a></li>
 							<li><a href="personality">個人主頁</a></li>
 							<li><a href="#">Tempus</a></li>
-							<li><a href="#">Adipiscing</a></li>-->
-						</ul>
+							<li><a href="#">Adipiscing</a></li>
+						</ul>-->
 					</nav>
 					<nav class="main">
 						<ul>
