--- a/view/personality.html
+++ b/view/personality.html
@@ -28,7 +28,7 @@
 					<nav class="links">
 						<ul>
 							<li><a href="activity">活動</a></li>
-							<li><a href="http://localhost:3000">聊天室</a></li>
+							<li><a href="chatroom">聊天室</a></li>
 							<li><a href="personality">個人主頁</a></li>
 						</ul>
 					</nav>
