--- a/view/upload1.html
+++ b/view/upload1.html
@@ -11,12 +11,11 @@
             <header id="header">
                 <h1><a href="/">萍水相逢</a></h1>
 					<nav class="links">
-						<!--<ul>
-							<li><a href="#">活動</a></li>
-							<li><a href="#">聊天室</a></li>
-							<li><a href="#">個人主頁</a></li>
-							<li><a href="#">Tempus</a></li>
-							<li><a href="#">Adipiscing</a></li>-->
+						<!--
+						<ul>
+							<li><a href="activity">活動</a></li>
+							<li><a href="chatroom">聊天室</a></li>
+							<li><a href="personality">個人主頁</a></li>
 						</ul>
 					</nav>
 					<nav class="main">
