--- a/view/single.html
+++ b/view/single.html
@@ -18,14 +18,12 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index">Future Imperfect</a></h1>
+						<h1><a href="index">萍水相逢</a></h1>
 						<nav class="links">
 							<ul>
-								<li><a href="#">Lorem</a></li>
-								<li><a href="#">Ipsum</a></li>
-								<li><a href="#">Feugiat</a></li>
-								<li><a href="#">Tempus</a></li>
-								<li><a href="#">Adipiscing</a></li>
+								<li><a href="activity">活動</a></li>
+								<li><a href="chatroom">聊天室</a></li>
+								<li><a href="personality">個人主頁</a></li>
 							</ul>
 						</nav>
 						<nav class="main">
