--- a/view/introduction_sucess.html
+++ b/view/introduction_sucess.html
@@ -7,7 +7,7 @@
     </head>
     <body>
 		<div style=" text-align:center">
-        <h2 >Upload Success!</h2>
+        <h2 >修改成功!</h2>
 		<a href="index">點我回首頁</a>
 		</div>
         <script src="jquery.min.js"></script>
