--- a/view/upload_success.html
+++ b/view/upload_success.html
@@ -3,42 +3,13 @@
     <head>
         <title>Future Imperfect by HTML5 UP</title>
 		<meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
         <link rel="stylesheet" href="main.css" type="text/css" />
     </head>
-    <body class="is-preload">
-        <div id="wrapper">
-            <header id="header">
-                <h1><a href="/">萍水相逢</a></h1>
-					<nav class="links">
-						<!--
-						<ul>
-							<li><a href="activity">活動</a></li>
-							<li><a href="chatroom">聊天室</a></li>
-							<li><a href="personality">個人主頁</a></li>
-						</ul>-->
-					</nav>
-					<nav class="main">
-						<ul>
-							<li class="search">
-								<a class="fa-search" href="#search">Search</a>
-								<form id="search" method="get" action="#">
-									<input type="text" name="query" placeholder="Search" />
-								</form>
-							</li>
-							<li class="menu">
-								<a class="fa-bars" href="#menu">Menu</a>
-							</li>
-						</ul>
-					</nav>
-            </header>
-            <!-- Menu -->
-			
-            <div id="main">
+    <body>
+            <div  style="text-align:center;">
                 <h2>Upload Success!</h2>
                 <a href="localhost:3003/index">點我回首頁</a>
             </div>
-        </div>
         <script src="jquery.min.js"></script>
 		<script src="browser.min.js"></script>
 		<script src="breakpoints.min.js"></script>
