upload some change2

--- a/view/picture_push.html
+++ b/view/picture_push.html
@@ -39,56 +39,22 @@
 								</form>
 							</section>
 
-						<!-- Links -->
-							<section>
-								<ul class="links">
-									<li>
-										<a href="#">
-											<h3>Lorem ipsum</h3>
-											<p>Feugiat tempus veroeros dolor</p>
-										</a>
-									</li>
-									<li>
-										<a href="#">
-											<h3>Dolor sit amet</h3>
-											<p>Sed vitae justo condimentum</p>
-										</a>
-									</li>
-									<li>
-										<a href="#">
-											<h3>Feugiat veroeros</h3>
-											<p>Phasellus sed ultricies mi congue</p>
-										</a>
-									</li>
-									<li>
-										<a href="#">
-											<h3>Etiam sed consequat</h3>
-											<p>Porta lectus amet ultricies</p>
-										</a>
-									</li>
-								</ul>
-							</section>
-
-						<!-- Actions -->
 							<section>
 								<ul class="actions stacked">
-									<li><a href="#" class="button large fit">Log In</a></li>
+									<li><a href="/" class="button large fit">Log out</a></li>
 								</ul>
 							</section>
 
 					</section>
-                    
-				<!-- Main -->
+
 					<div id="main">                                  
-						<!-- tital -->
 								<header>
 									<div class="title">
 										<h2>發表圖片</h2>
 										<p>( /  ● ▽ ● )/</p>
 									</div>
 								</header>
-	
-						<!-- Post -->
+
 							<article class="post">
                                 <form action="http://localhost:3001/upload" method="post" enctype="multipart/form-data">
 								<header>
@@ -108,29 +74,15 @@
 							</article>
 					</div>
 
-				<!-- Sidebar -->
 					<section id="sidebar">
 
-						<!-- Intro -->
+						<!-- 介紹 -->
 							<section id="intro">
 								<a href="#" class="logo"><img src="logo.jpg" alt="" /></a>
 								<header>
 									<h2>暱稱</h2>
 								</header>
 							</section>
-
-						<!-- Footer -->
-							<section id="footer">
-								<ul class="icons">
-									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon solid fa-rss"><span class="label">RSS</span></a></li>
-									<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-								</ul>
-								<p class="copyright">&copy; Untitled. Design: <a href="http://html5up.net">HTML5 UP</a>. Images: <a href="http://unsplash.com">Unsplash</a>.</p>
-							</section>
-
 					</section>
 
 			</div>
