增加放棄頁面

--- a/view/introduction.html
+++ b/view/introduction.html
@@ -65,6 +65,7 @@
 											<div class="col-12">
 													<br>
 													<input type="button" value="Send" onclick="location.href='introduction_sucess'"/>
+													<input type="button" value="discard" onclick="location.href='discard'"/>
 													<input type="reset" value="Reset" /><!--清除-->
 											</div>
 										</div>
