--- a/view/text_push.html
+++ b/view/text_push.html
@@ -65,6 +65,7 @@
 											<div class="col-12">
 													<br>
 													<input type="button" value="Send" onclick="location.href='upload1'"/>
+													<input type="button" value="discard" onclick="location.href='discard_t'"/>
 													<input type="reset" value="Reset" />
 											</div>
 										</div>
